--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,21 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Pokemon Solid', sans-serif !important;
+  font-family: "Pokemon Solid", sans-serif !important;
 }
 
 /* animaciones => OneCard */
 
-
-
-
-
-.poke_box{
+.poke_box {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
-
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
-.pokeball{
+.pokeball {
   position: relative;
   width: 150px;
   height: 150px;
@@ -29,28 +24,39 @@
   border-radius: 50%;
   overflow: hidden;
   box-shadow: inset -10px 10px 0 10px #ccc;
-  animation: shake 1.25s cubic-bezier(.36,.07,.19,.97) infinite;
+  animation: shake 1.25s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
   animation-play-state: paused;
-  
 }
 
-.pokeball:hover{
+.pokeball:hover {
   animation-play-state: running;
 }
 
 @keyframes shake {
-  0% { transform: translate(0, 0) rotate(0); }
-  20% { transform: translate(-10px, 0) rotate(-20deg); }
-  30% { transform: translate(10px, 0) rotate(20deg); }
-  50% { transform: translate(-10px, 0) rotate(-10deg); }
-  60% { transform: translate(10px, 0) rotate(10deg); }
-  100% { transform: translate(0, 0) rotate(0); }
+  0% {
+    transform: translate(0, 0) rotate(0);
+  }
+  20% {
+    transform: translate(-10px, 0) rotate(-20deg);
+  }
+  30% {
+    transform: translate(10px, 0) rotate(20deg);
+  }
+  50% {
+    transform: translate(-10px, 0) rotate(-10deg);
+  }
+  60% {
+    transform: translate(10px, 0) rotate(10deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0);
+  }
 }
 
 .pokeball::before,
 .pokeball::after {
-content:"";
-position: absolute;
+  content: "";
+  position: absolute;
 }
 
 .pokeball::before {
@@ -77,15 +83,93 @@ position: absolute;
   border-radius: 50%;
   z-index: 10;
   box-shadow: 0 0 0 7px black;
-  animation: blink .5s alternate infinite;
+  animation: blink 0.5s alternate infinite;
   animation-play-state: paused;
 }
 
-.pokeball:hover .pokeball__button{
-    animation-play-state: running;
+.pokeball:hover .pokeball__button {
+  animation-play-state: running;
 }
 
 @keyframes blink {
-  from { background: #eee;}
-  to { background: #e74c3c; }
+  from {
+    background: #eee;
+  }
+  to {
+    background: #e74c3c;
+  }
+}
+/* Cards */
+.container {
+  position: relative;
+  width: 300px;
+  height: 400px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+.card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  border-left: rgba(255, 255, 255, 0.342) 1px solid;
+  border-top: rgba(255, 255, 255, 0.342) 1px solid;
+  border-radius: 20px;
+  backdrop-filter: blur(30px);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 20px;
+  color: white;
+  backface-visibility: hidden;
+  transform: rotateY(0deg);
+  transform-style: preserve-3d;
+  transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
+}
+.front {
+  transform: rotateY(0deg);
+  padding: 6px;
+}
+.back {
+  background: rgba(255, 255, 255, 0.109);
+  transform: rotateY(180deg);
+  padding: 10px;
+}
+.container:hover > .front {
+  transform: rotateY(-180deg);
+}
+.container:hover > .back {
+  transform: rotateY(0deg);
+}
+.btn {
+  border: 1px solid white;
+  background: rgba(255, 255, 255, 0.21);
+  padding: 10px 20px;
+  border-radius: 20px;
+  text-decoration: none;
+  color: white;
+  transition: all 0.5s;
+}
+.btn:hover {
+  padding: 10px 40px;
+  background: white;
+  color: black;
+}
+/* color card */
+.greenCard {
+  background: linear-gradient(to right, #11998e, #38ef7d) !important;
+}
+.yelowCard {
+  background: radial-gradient(
+    circle,
+    rgba(254, 255, 37, 1) 28%,
+    rgba(247, 195, 122, 1) 100%
+  ) !important;
+}
+.blueCard {
+  background: linear-gradient(to right, #43cea2, #185a9d) !important;
+}
+.redCard {
+  background: linear-gradient(to right, #ffcc33, #ffb347) !important;
+}
+.normalCard {
+  background: linear-gradient(to right, #2c3e50, #4ca1af) !important ;
 }
