--- a/src/common/navbar/navbar.css
+++ b/src/common/navbar/navbar.css
@@ -6,6 +6,7 @@
 .links >  a{
     color: white !important;
     text-decoration: none;
+    font-size: 10px;
 }
 .links >  a:hover{
     background-color: rgba(43, 43, 255, 0.712);
