--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -56,6 +56,10 @@
   border-radius: 6px;
   height: 26px;
 }
+.chip{
+  font-family: 'Press Start 2P', cursive !important;
+
+}
 @media (max-width: 700px) {
   .CardGrid {
     grid-template-columns: 100%;
